--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ author:
 
   # Social media
   bluesky          : # "bsky.app" # Replace this with you Bluesky username
-  facebook         : "https://www.facebook.com/profile.php?id=100093071842825" # Username
+  facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
   goodreads        : # Username
