--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ author:
 
   # Social media
   bluesky          : # "bsky.app" # Replace this with you Bluesky username
-  facebook         : # Username
+  facebook         : "Yechiel Dai" # Username
   flickr           : # Username
   foursquare       : # Username
   goodreads        : # Username
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "Yanqi Dai" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
