Update location from Beijing to Singapore

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Yanqi Dai (代彦琪)"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Candidate in Artificial Intelligence"
-  location         : "Beijing, China"
+  location         : "Singapore"
   employer         : "Renmin University of China"
   uri              : # URL
   email            : "yanqidai@ruc.edu.cn" 
